# plonky2-ecdsa

./: Cargo.toml  README.md
examples/: ecdsa_secp256k1.rs
src/curve/: curve_adds.rs  curve_msm.rs  curve_summation.rs  curve_types.rs  glv.rs  secp256k1.rs
src/gadgets/: biguint.rs  curve.rs  curve_fixed_base.rs  curve_msm.rs  curve_windowed_mul.rs  ecdsa.rs  glv.rs  nonnative.rs  split_nonnative.rs
