[package]
name = "plonky2_ecdsa"
description = "ECDSA gadget for Plonky2"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
parallel = ["plonky2_maybe_rayon/parallel", "plonky2/parallel"]

[dependencies]
anyhow = { version = "1.0.40" }
itertools = { version = "0.10.0" }
plonky2_maybe_rayon = { version = "0.1.0" }
num = { version = "0.4.0" }
plonky2 = { workspace = true }
plonky2_u32 = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand = { version = "0.8.4", features = ["getrandom"] }
log = "0.4"
env_logger = "0.10"
